fix: about us video and survey header mopbile view spacing

--- a/client/src/components/AboutUsSection/AboutUsSection.css
+++ b/client/src/components/AboutUsSection/AboutUsSection.css
@@ -60,6 +60,38 @@
   }
 
   /* Responsive styling for smaller screens */
+
+  @media (max-width: 1400px) {
+
+    .about-us-text h2 {
+      text-align: center;
+    }
+
+    .about-us-video iframe {
+      max-width: 100%; /* Shrink the image a bit on mobile */
+      margin: 0 auto; /* Center the image */
+    }
+
+    .learn-more-btn-container{
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
+
+    .about-us-text,
+    .about-us-video {
+      flex: 1 1 100%; /* Full width on smaller screens */
+      text-align: center; /* Center-align text */
+    }
+
+    .about-us-video iframe {
+      max-width: 100%; /* Shrink the image a bit on mobile */
+      margin: 0 auto; /* Center the image */
+    }
+
+   
+  }
+
   @media (max-width: 768px) {
     .about-us-container {
       flex-direction: column;
@@ -78,5 +110,9 @@
     .about-us-video iframe {
       max-width: 90%; /* Shrink the image a bit on mobile */
       margin: 0 auto; /* Center the image */
+    }
+
+    .learn-more-btn {
+      margin: 0 auto; /* Center the button */
     }
   }
